--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -1,7 +1,10 @@
 .login_box{
     background-color: #080710;
+    height: 100vh;
+    width: 100%;
 }
-.background{
+
+.login_box .background{
     width: 430px;
     height: 520px;
     position: absolute;
@@ -9,30 +12,27 @@
     left: 50%;
     top: 50%;
 }
-.background .shape{
+
+.login_box .background .shape{
     height: 200px;
     width: 200px;
     position: absolute;
     border-radius: 50%;
 }
-.shape:first-child{
-    background: linear-gradient(
-        #1845ad,
-        #23a2f6
-    );
+
+.login_box .shape:first-child{
+    background: linear-gradient(#1845ad,#23a2f6);
     left: -80px;
     top: -80px;
 }
-.shape:last-child{
-    background: linear-gradient(
-        to right,
-        #ff512f,
-        #f09819
-    );
-    right: -30px;
+
+.login_box .shape:last-child{
+    background: linear-gradient(to right,#ff512f,#f09819);
+    right: -65px;
     bottom: -80px;
 }
-form{
+
+.login_box form{
     height: 520px;
     width: 400px;
     background-color: rgba(255,255,255,0.13);
@@ -46,27 +46,30 @@ form{
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
     padding: 50px 35px;
 }
-form *{
+
+.login_box form *{
     font-family: 'Poppins',sans-serif;
     color: #ffffff;
     letter-spacing: 0.5px;
     outline: none;
     border: none;
 }
-form h3{
+
+.login_box form h3{
     font-size: 32px;
     font-weight: 500;
     line-height: 42px;
     text-align: center;
 }
 
-label{
+.login_box label{
     display: block;
     margin-top: 30px;
     font-size: 16px;
     font-weight: 500;
 }
-input{
+
+.login_box input{
     display: block;
     height: 50px;
     width: 100%;
@@ -77,10 +80,13 @@ input{
     font-size: 14px;
     font-weight: 300;
 }
-::placeholder{
+
+/* ❌ Xato joy tuzatildi */
+.login_box input::placeholder{
     color: #e5e5e5;
 }
-button{
+
+.login_box button{
     margin-top: 50px;
     width: 100%;
     background-color: #ffffff;
@@ -91,25 +97,31 @@ button{
     border-radius: 5px;
     cursor: pointer;
 }
-.social{
+
+.login_box .social{
   margin-top: 30px;
   display: flex;
+  justify-content: center;
 }
-.social div{
-  background: red;
+
+.login_box .social div{
   width: 150px;
   border-radius: 3px;
-  padding: 5px 10px 10px 5px;
+  padding: 10px;
   background-color: rgba(255,255,255,0.27);
   color: #eaf0fb;
   text-align: center;
+  cursor: pointer;
 }
-.social div:hover{
+
+.login_box .social div:hover{
   background-color: rgba(255,255,255,0.47);
 }
-.social .fb{
+
+.login_box .social .fb{
   margin-left: 25px;
 }
-.social i{
+
+.login_box .social i{
   margin-right: 4px;
 }
